# multimedia-pipeline

./: .gitignore  AGENTS.md  LICENSE  README.md  __main__.py  pyproject.toml
.agent/: architecture.md  boilerplate.md  frontier.md  interfaces.md  reference.md  wrapper_scripts.md
.agent/bugs/: ipcm-audio-in-mp4.md  youtube-podcast-high-frequency-glitter.md
.agent/decisions/: filter-podcast-audio-chain.md
multimedia_pipeline/: __init__.py  __main__.py  cli.py
pipelines/: extract_and_clean_voice.py  extract_and_clean_voice.yaml  remove_silences_and_extract_clean_voice.py  remove_silences_and_extract_clean_voice.yaml  scrub_youtube_media.py  scrub_youtube_media.yaml  scrub_youtube_podcast.py  scrub_youtube_podcast.yaml
shared/: __init__.py  config.py  ffprobe.py  io.py  output.py
stages/: add_metadata.py  convert_to_wav.py  cut.py  extract_and_clean_voice.py  extract_audio.py  fetch_sponsorblock_timestamps.py  filter_podcast_audio.py  identify_youtube_media.py  normalize_audio.py  remux_audio.py  sanitize_video.py  scrub_metadata.py  suggest_name.py
stages/clean_recorded_voice/: __init__.py  run.py
stages/remove_silences/: __init__.py  run.py
test/: bench_audio_filter.py  run_quick.py
test/cli/: help.py
test/pipelines/: extract_and_clean_voice.py  remove_silences_and_extract_clean_voice.py  scrub_youtube_media.py  scrub_youtube_podcast.py  scrub_youtube_podcast_config.py
test/stages/: add_metadata.py  clean_recorded_voice.py  convert_to_wav.py  cut.py  (+12 more)
wrapper_scripts/: process_podcast_inbox.sh  process_recorded_videos.sh  process_youtube_inbox.sh
(+14 files in other folders)
